@@ -5,6 +5,7 @@ import (
 
 	"github.com/comment-anything/ca-back-end/communication"
 	"github.com/comment-anything/ca-back-end/database/generated"
+	"github.com/comment-anything/ca-back-end/util"
 )
 
 // validateRegisterRequest validates whether a register request can succeed or not. If it can't succeed, this function will return a string intended for transmission to the end user explaining generally why the request doesn't work.
@@ -14,6 +15,18 @@ func validateRegisterRequest(comm *communication.Register, server *Server) (bool
 	}
 	if comm.Password != comm.RetypePassword {
 		return false, "Passwords must match."
+	}
+	passGood, why := util.ValidatePasswordStrength(comm.Password)
+	if !passGood {
+		return false, why
+	}
+	usernameGood, why := util.ValidateUsername(comm.Username)
+	if !usernameGood {
+		return false, why
+	}
+	emailGood, why := util.ValidateEmail(comm.Email)
+	if !emailGood {
+		return false, why
 	}
 	_, err := server.DB.Queries.GetUserByEmail(context.Background(), comm.Email)
 	if err == nil {
@@ -43,6 +56,13 @@ func (c *GuestController) HandleCommandRegister(comm *communication.Register, se
 		} else {
 			c.manager.TransferGuest(c, &user)
 			c.nextResponse = append(c.nextResponse, communication.GetMessage(true, "You registered succesfully."))
+			var loginResponse communication.LoginResponse
+			loginResponse.LoggedInAs.CreatedOn = user.CreatedAt.Unix()
+			loginResponse.LoggedInAs.UserId = user.ID
+			loginResponse.LoggedInAs.Username = user.Username
+			loginResponse.LoggedInAs.ProfileBlurb = user.ProfileBlurb.String
+			c.nextResponse = append(c.nextResponse, communication.Wrap("LoginResponse", loginResponse))
+
 		}
 	}
 }
