@@ -2,6 +2,7 @@ package server
 
 import (
 	"encoding/json"
+	"fmt"
 	"net/http"
 
 	"github.com/comment-anything/ca-back-end/communication"
@@ -11,20 +12,15 @@ import (
 func (s *Server) postRegister(w http.ResponseWriter, r *http.Request) {
 	cont := r.Context().Value(CtxController).(UserControllerInterface)
 	if cont != nil {
-		cont.AddMessage(true, "TEST MESG")
-		//cont.HandleCommandRegister()
-	} else {
-		resp := &communication.LoginResponse{}
-		resp.LoggedInAs.Username = "testme"
-		resp.LoggedInAs.UserId = 0
-		resp.LoggedInAs.IsAdmin = false
-		resp.LoggedInAs.CreatedOn = 0
-		resp.LoggedInAs.IsDomainModerator = false
-		resp.LoggedInAs.IsGlobalModerator = false
-		resp.LoggedInAs.ProfileBlurb = "blablablah"
+		comm := communication.Register{}
+		err := json.NewDecoder(r.Body).Decode(&comm)
+		if err != nil {
+			cont.AddMessage(false, fmt.Sprintf("I couldn't understand your registration request: %s", err.Error()))
+		} else {
+			cont.HandleCommandRegister(&comm, s)
+		}
 
-		respString, _ := json.Marshal(resp)
-		w.Write(respString)
+		//cont.HandleCommandRegister()
 	}
 
 }
